fixed english line spacing

--- a/web/src/app/text-edit/text-edit.component.css
+++ b/web/src/app/text-edit/text-edit.component.css
@@ -21,7 +21,7 @@
 }
 
 .english {
-  line-height: 150%;
+  line-height: 230%;
   font-size: large;
 }
 
